--- a/c/Makefile.common
+++ b/c/Makefile.common
@@ -13,25 +13,22 @@
 # limitations under the License.
 #
 
-
-UNITTEST_PP_DIR     = ../UnitTest++
-SOURCE_FOLDERS      = src
-INCLUDE_FOLDERS     = include
-TEST_SOURCE_FOLDERS = test
+PROJECT_FOLDER          := `pwd`
+INCLUDE_FOLDERS         = include
 
 # 
 # Version/Product information
 #
 MAJOR_VERSION           = 0
-MINOR_VERSION           = 3
-BUILD_VERSION           = 4
+MINOR_VERSION           = 0
+BUILD_VERSION           = 1
 PRODUCT_NAME            = mango
 
 # 
 # Build directory
 #
 ifeq ($(OUTPUT_DIR),)
-    OUTPUT_DIR          = bld
+    OUTPUT_DIR          = $(PROJECT_FOLDER)/bld
 endif
 
 # 
@@ -50,8 +47,7 @@ OUTPUT_DIR              := $(OUTPUT_DIR)/$(BUILD_MODE)
 DEBUG_CFLAGS            =   -g -fno-inline
 PROFILE_CFLAGS          =   -g -fno-inline -pg
 RELEASE_CFLAGS          =   -O3
-CORE_CFLAGS             =   -Wall                   \
-                            -I../src
+CORE_CFLAGS             =   -Wall -I../$(INCLUDE_FOLDERS)
 
 ifeq ($(BUILD_MODE), debug)
     CFLAGS              =   $(CORE_CFLAGS) $(DEBUG_CFLAGS)              \
@@ -78,11 +74,4 @@ INCLUDE_INSTALL_DIR     = /usr/local/include
 #
 GCC                     = gcc
 GPP                     = g++
-
-###################     Begin Targets       ######################
-
-# Implicit rule to build .o into the build directory from .cpp
-$(OUTPUT_DIR)/%.o : %.c
-	@echo Building $@
-	$(GCC) -c $(CFLAGS) $< -o $@
 
