--- a/c/test/Makefile
+++ b/c/test/Makefile
@@ -84,11 +84,19 @@ dep:
 	makedepend -Y -p"$(OUTPUT_DIR)/" -I../include   -- $(TEST_SOURCES)
 # DO NOT DELETE
 
+../bld/./ParserTests.o: ../include/mangopub.h ../include/mfwddefs.h
+../bld/./ParserTests.o: ../include/mtoken.h ../include/mtokenizer.h
+../bld/./ParserTests.o: ../include/mparser.h ../include/mlibrary.h
+../bld/./ParserTests.o: ../include/minputsource.h ../include/mstring.h
+../bld/./ParserTests.o: ../include/mtemplateloader.h stlstringtoken.h
+../bld/./ParserTests.o: stlinputsource.h
 ../bld/./stlinputsource.o: stlinputsource.h ../include/minputsource.h
 ../bld/./stlinputsource.o: ../include/mfwddefs.h
 ../bld/./stlstringtoken.o: ../include/mtoken.h ../include/mfwddefs.h
 ../bld/./stlstringtoken.o: stlstringtoken.h
 ../bld/./TokenizerTests.o: ../include/mangopub.h ../include/mfwddefs.h
 ../bld/./TokenizerTests.o: ../include/mtoken.h ../include/mtokenizer.h
-../bld/./TokenizerTests.o: ../include/minputsource.h stlstringtoken.h
+../bld/./TokenizerTests.o: ../include/mparser.h ../include/mlibrary.h
+../bld/./TokenizerTests.o: ../include/minputsource.h ../include/mstring.h
+../bld/./TokenizerTests.o: ../include/mtemplateloader.h stlstringtoken.h
 ../bld/./TokenizerTests.o: stlinputsource.h
