--- a/c/test/Makefile
+++ b/c/test/Makefile
@@ -88,7 +88,8 @@ dep:
 ../bld/./ParserTests.o: ../include/mtoken.h ../include/mtokenizer.h
 ../bld/./ParserTests.o: ../include/mparser.h ../include/mlibrary.h
 ../bld/./ParserTests.o: ../include/minputsource.h ../include/mstring.h
-../bld/./ParserTests.o: ../include/mtemplateloader.h stlstringtoken.h
+../bld/./ParserTests.o: ../include/mtemplateloader.h
+../bld/./ParserTests.o: ../include/mtemplatecontext.h stlstringtoken.h
 ../bld/./ParserTests.o: stlinputsource.h
 ../bld/./stlinputsource.o: stlinputsource.h ../include/minputsource.h
 ../bld/./stlinputsource.o: ../include/mfwddefs.h
@@ -98,5 +99,6 @@ dep:
 ../bld/./TokenizerTests.o: ../include/mtoken.h ../include/mtokenizer.h
 ../bld/./TokenizerTests.o: ../include/mparser.h ../include/mlibrary.h
 ../bld/./TokenizerTests.o: ../include/minputsource.h ../include/mstring.h
-../bld/./TokenizerTests.o: ../include/mtemplateloader.h stlstringtoken.h
+../bld/./TokenizerTests.o: ../include/mtemplateloader.h
+../bld/./TokenizerTests.o: ../include/mtemplatecontext.h stlstringtoken.h
 ../bld/./TokenizerTests.o: stlinputsource.h
