--- a/c/test/Makefile
+++ b/c/test/Makefile
@@ -92,8 +92,9 @@ dep:
 ../bld/./ParserTests.o: ../include/minputsource.h ../include/mstring.h
 ../bld/./ParserTests.o: ../include/mfreetext.h ../include/mtemplateloader.h
 ../bld/./ParserTests.o: ../include/mtemplatecontext.h ../include/mnode.h
-../bld/./ParserTests.o: ../include/mnodelist.h ../include/mvarnode.h
-../bld/./ParserTests.o: ../include/mvariable.h stlinputsource.h
+../bld/./ParserTests.o: ../include/mnodelist.h ../include/mvariable.h
+../bld/./ParserTests.o: ../include/mvarnode.h ../include/mfilternode.h
+../bld/./ParserTests.o: stlinputsource.h
 ../bld/./stlinputsource.o: stlinputsource.h ../include/minputsource.h
 ../bld/./stlinputsource.o: ../include/mfwddefs.h
 ../bld/./TokenizerTests.o: ../include/mangopub.h ../include/mfwddefs.h
@@ -105,5 +106,6 @@ dep:
 ../bld/./TokenizerTests.o: ../include/mfreetext.h
 ../bld/./TokenizerTests.o: ../include/mtemplateloader.h
 ../bld/./TokenizerTests.o: ../include/mtemplatecontext.h ../include/mnode.h
-../bld/./TokenizerTests.o: ../include/mnodelist.h ../include/mvarnode.h
-../bld/./TokenizerTests.o: ../include/mvariable.h stlinputsource.h
+../bld/./TokenizerTests.o: ../include/mnodelist.h ../include/mvariable.h
+../bld/./TokenizerTests.o: ../include/mvarnode.h ../include/mfilternode.h
+../bld/./TokenizerTests.o: stlinputsource.h
