more filter fixes

--- a/c/src/Makefile
+++ b/c/src/Makefile
@@ -94,17 +94,27 @@ dep:
 
 # DO NOT DELETE
 
+../bld/./maddfilter.o: ../include/maddfilter.h ../include/mfwddefs.h
 ../bld/./mbintree.o: ../include/mbintree.h ../include/mfwddefs.h
 ../bld/./mclasses.o: ../include/mclasses.h ../include/mfwddefs.h
-../bld/./mclasses.o: ../include/mbintree.h
+../bld/./mclasses.o: ../include/mbintree.h ../include/mmemutils.h
 ../bld/./merror.o: ../include/merror.h ../include/mfwddefs.h
-../bld/./mfilternode.o: ../include/mfilternode.h ../include/mfwddefs.h
-../bld/./mfilternode.o: ../include/mvariable.h ../include/mtemplatecontext.h
+../bld/./mfilter.o: ../include/mmemutils.h ../include/mfwddefs.h
+../bld/./mfilter.o: ../include/mfilter.h ../include/mvariable.h
+../bld/./mfilternode.o: ../include/mmemutils.h ../include/mfwddefs.h
+../bld/./mfilternode.o: ../include/mfilternode.h ../include/mfilter.h
+../bld/./mfilternode.o: ../include/mvariable.h ../include/merror.h
+../bld/./mfilternode.o: ../include/msingletons.h ../include/mlibrary.h
+../bld/./mfilternode.o: ../include/mlist.h ../include/mtokenlists.h
+../bld/./mfilternode.o: ../include/mtoken.h ../include/mparser.h
+../bld/./mfilternode.o: ../include/mtokenizer.h ../include/mstring.h
+../bld/./mfilternode.o: ../include/mtemplatecontext.h
 ../bld/./mfreetext.o: ../include/mnode.h ../include/mfwddefs.h
 ../bld/./mfreetext.o: ../include/mclasses.h ../include/mstring.h
 ../bld/./mfreetext.o: ../include/mfreetext.h
 ../bld/./miterator.o: ../include/miterator.h ../include/mfwddefs.h
 ../bld/./mlibrary.o: ../include/mlibrary.h ../include/mfwddefs.h
+../bld/./mlibrary.o: ../include/mlist.h ../include/mstring.h
 ../bld/./mlist.o: ../include/mlist.h ../include/mfwddefs.h
 ../bld/./mnode.o: ../include/mnode.h ../include/mfwddefs.h
 ../bld/./mnode.o: ../include/mclasses.h
@@ -116,22 +126,35 @@ dep:
 ../bld/./mparser.o: ../include/mtemplateloader.h ../include/mparser.h
 ../bld/./mparser.o: ../include/mlist.h ../include/mstring.h
 ../bld/./mparser.o: ../include/mfreetext.h ../include/mvarnode.h
-../bld/./mparser.o: ../include/mnodelist.h
+../bld/./mparser.o: ../include/mtagnode.h ../include/mnodelist.h
+../bld/./msingletons.o: ../include/msingletons.h ../include/mfwddefs.h
+../bld/./msingletons.o: ../include/mlibrary.h ../include/mstring.h
 ../bld/./mstring.o: ../include/merror.h ../include/mfwddefs.h
-../bld/./mstring.o: ../include/mstring.h
+../bld/./mstring.o: ../include/mstring.h ../include/mmemutils.h
 ../bld/./mtagnode.o: ../include/mnode.h ../include/mfwddefs.h
 ../bld/./mtagnode.o: ../include/mclasses.h ../include/merror.h
 ../bld/./mtagnode.o: ../include/mparser.h ../include/mtokenizer.h
 ../bld/./mtagnode.o: ../include/mtoken.h ../include/mtemplateloader.h
 ../bld/./mtagnode.o: ../include/mtagnode.h
 ../bld/./mtoken.o: ../include/mstring.h ../include/mfwddefs.h
-../bld/./mtoken.o: ../include/mtoken.h
+../bld/./mtoken.o: ../include/mtoken.h ../include/mmemutils.h
 ../bld/./mtokenizer.o: ../include/merror.h ../include/mfwddefs.h
 ../bld/./mtokenizer.o: ../include/minputsource.h ../include/mstring.h
 ../bld/./mtokenizer.o: ../include/mtokenizer.h ../include/mtoken.h
+../bld/./mtokenizer.o: ../include/mmemutils.h
+../bld/./mtokenlists.o: ../include/mtokenlists.h ../include/mfwddefs.h
+../bld/./mtokenlists.o: ../include/mtoken.h
+../bld/./mutils.o: ../include/mutils.h ../include/mfwddefs.h
 ../bld/./mvariable.o: ../include/mvariable.h ../include/mfwddefs.h
+../bld/./mvariable.o: ../include/mlibrary.h ../include/mparser.h
+../bld/./mvariable.o: ../include/mtokenizer.h ../include/mtoken.h
 ../bld/./mvariable.o: ../include/mstring.h ../include/mtemplatecontext.h
 ../bld/./mvariable.o: ../include/mnode.h ../include/mclasses.h
+../bld/./mvariable.o: ../include/mmemutils.h ../include/mtokenlists.h
+../bld/./mvariable.o: ../include/mutils.h ../include/msingletons.h
 ../bld/./mvarnode.o: ../include/mnode.h ../include/mfwddefs.h
-../bld/./mvarnode.o: ../include/mclasses.h ../include/mvariable.h
-../bld/./mvarnode.o: ../include/mlist.h
+../bld/./mvarnode.o: ../include/mclasses.h ../include/merror.h
+../bld/./mvarnode.o: ../include/mparser.h ../include/mtokenizer.h
+../bld/./mvarnode.o: ../include/mtoken.h ../include/mvariable.h
+../bld/./mvarnode.o: ../include/mfilternode.h ../include/mlist.h
+../bld/./mvarnode.o: ../include/mmemutils.h
